update and delete post routes & validators added
