# swagger-output.json
@@ -13,14 +13,14 @@
   "paths": {
     "/api-docs": {
       "get": {
-        "description": "This is api document route",
+        "description": "",
         "parameters": [],
         "responses": {}
       }
     },
     "/": {
       "get": {
-        "description": "Returns a success message of server working",
+        "description": "",
         "parameters": [],
         "responses": {
           "200": {
@@ -34,7 +34,7 @@
     },
     "/users/{id}": {
       "get": {
-        "description": "This route returns a user by Id",
+        "description": "",
         "produces": [
           "application/json"
         ],
@@ -50,6 +50,9 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -58,7 +61,7 @@
     },
     "/users/": {
       "get": {
-        "description": "This route returns an array of users",
+        "description": "",
         "produces": [
           "application/json"
         ],
@@ -73,7 +76,7 @@
         }
       },
       "post": {
-        "description": "This routes creates a new user",
+        "description": "",
         "parameters": [
           {
             "name": "body",
@@ -110,6 +113,9 @@
           "201": {
             "description": "Created"
           },
+          "412": {
+            "description": "Precondition Failed"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -118,7 +124,7 @@
     },
     "/posts/{id}": {
       "get": {
-        "description": "This route returns a post by Id",
+        "description": "",
         "produces": [
           "application/json"
         ],
@@ -134,6 +140,98 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "postCategory": {
+                  "example": "any"
+                },
+                "userId": {
+                  "example": "any"
+                },
+                "userEmail": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "userId": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -142,7 +240,7 @@
     },
     "/posts/": {
       "get": {
-        "description": "This route returns all posts",
+        "description": "",
         "produces": [
           "application/json"
         ],
@@ -157,7 +255,7 @@
         }
       },
       "post": {
-        "description": "This route creates a new post",
+        "description": "",
         "parameters": [
           {
             "name": "body",
@@ -184,6 +282,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
